--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=backend
+
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/martdb
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+jwt.secret=your_secret_key_very_secure_key_123456
