--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,65 @@
+# ============================================================
+# ROOT .gitignore — covers backend/ and frontend/ together
+# ============================================================
+
+# ── IDE / Editors ───────────────────────────────────────────
 .idea/
-node_modules/
-target/
+.vscode/*
+!.vscode/extensions.json
+*.iws
+*.iml
+*.ipr
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
+HELP.md
+
+# ── Maven / Spring Boot (backend) ──────────────────────────
+backend/target/
+backend/.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/nbdist/
+/.nb-gradle/
+
+# ── Node / Vite (frontend) ──────────────────────────────────
+frontend/node_modules/
+frontend/dist/
+frontend/dist-ssr/
+*.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# ── Secrets — NEVER commit these ────────────────────────────
+backend/src/main/resources/application-dev.properties
+frontend/.env
+frontend/.env.development
+frontend/.env.production
+
+# ── Uploads (user-uploaded images stored locally) ───────────
+backend/uploads/
